# docs/swagger.json
@@ -1,19 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Some endpoints for the tem db",
-        "title": "TEM Backend",
-        "contact": {
-            "name": "Flou21",
-            "email": "muehlhans.f@coflnet.com"
-        },
-        "license": {
-            "name": "AGPL v3"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "sky.coflnet.com/tem/",
-    "basePath": "/api/tem/",
     "paths": {
         "/player/{uuid}": {
             "get": {
@@ -41,7 +30,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github.com_Coflnet_tem-backend_internal_api.PlayerResponse"
+                            "$ref": "#/definitions/internal_api.PlayerResponse"
                         }
                     }
                 }
